2007-06-16  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (unblock_child_pads), (unblock_childs),
	(unlock_child_state), (lock_child_state),
	(gnl_composition_change_state), (object_pad_removed),
	(gnl_composition_add_object), (gnl_composition_remove_object):
	Unblock child source pads when the pads OR the elements are being
	removed.
	Also unblock those pads when going to READY/NULL.
	Lock the state of gnlobjects being added, else it screws up state
	changes of the composition.
	Properly unref items when using GstIterators.
	* gnl/gnloperation.c: (gnl_operation_class_init),
	(gnl_operation_finalize), (get_unused_static_sink_pad),
	(add_sink_pad):
	memleak fixes.
	* tests/check/common.h:
	* tests/check/simple.c: (GST_START_TEST):
	memleak fixes.

2007-06-15  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlsource.c: (ghost_seek_pad), (pad_blocked_cb):
	Let's stop using the main thread for other-thread processing and
	instead go the proper way and use yet-another-thread through
	g_thread_create().
	* gnl/gnlcomposition.c: (gnl_composition_handle_message):
	Add a FIXME/WARNING related to switching to g_thread_create regarding
	SEGMENT_DONE message handling. This requires a better look at than I
	can give right now.

2007-05-22  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlsource.c: (gnl_source_init):
	Use 'async-handling' property if available so our state change happens
	correctly with latest core modifications.

2007-05-22  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (get_new_seek_event),
	(get_current_position), (gnl_composition_event_handler),
	(refine_start_stop_in_region_above_priority),
	(convert_list_to_tree), (get_stack_list),
	(get_clean_toplevel_stack), (are_same_stacks), (update_pipeline),
	(gnl_composition_add_object):
	* gnl/gnlobject.c: (translate_incoming_seek):
	* gnl/gnlobject.h:
	Allow adding objects in a composition WHILE playing.
	Fixes #437105

2007-05-05  Edward Hervey  <edward@fluendo.com>

	* configure.ac: